samples/_failures_safe/1761467867_941f24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50d0b199.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_50d0b199.c:147: error: expected ‘{’ at end of input
